fixed h1 letter spacing + size breakpoints

--- a/src/scss/02-theme/01-typography/_headers.scss
+++ b/src/scss/02-theme/01-typography/_headers.scss
@@ -1,10 +1,7 @@
-$heading-font: $merriweather_stack;
-$body-font: $nimbus-sans_stack;
-
 $h1-color: $warm-grey-900;
 $h1-fs: $fs-4xl;
 $h1-lh: 1;
-$h1-ls: -0.5;
+$h1-ls: -1px;
 
 $h2-color: $warm-grey-900;
 $h2-fs: $fs-2xl;
@@ -32,7 +29,6 @@ $lead-lh: 1.5;
 
 h1,
 .h1 {
-  // @include responsive-text(45px, 64px);
   font-family: $heading-font;
   color: $h1-color;
   font-size: $h1-fs;
@@ -40,6 +36,10 @@ h1,
   letter-spacing: $h1-ls;
   margin: 0;
   margin-bottom: $space-2xl;
+
+  @include media-breakpoint-down(sm) {
+    font-size: $fs-3xl;
+  }
 }
 
 h1 + h2 {
@@ -48,7 +48,6 @@ h1 + h2 {
 
 h2,
 .h2 {
-  // @include responsive-text(28px, 48px);
   font-family: $heading-font;
   color: $h2-color;
   font-size: $h2-fs;
@@ -58,7 +57,6 @@ h2,
 }
 h3,
 .h3 {
-  // @include responsive-text(24px, 32px);
   font-family: $heading-font;
   color: $h3-color;
   font-size: $h3-fs;
@@ -68,7 +66,6 @@ h3,
 }
 h4,
 .h4 {
-  // @include responsive-text(18px, 24px);
   font-family: $heading-font;
   color: $h4-color;
   font-size: $h4-fs;
@@ -78,7 +75,6 @@ h4,
 }
 h5,
 .h5 {
-  // @include responsive-text(16px, 20px);
   font-family: $heading-font;
   color: $h5-color;
   font-size: $h5-fs;
@@ -88,7 +84,6 @@ h5,
 }
 h6,
 .h6 {
-  // @include responsive-text(16px, 18px);
   font-family: $heading-font;
   color: $h6-color;
   font-size: $h6-fs;
